--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "third_party/imgui"]
 	path = third_party/imgui
 	url = https://github.com/ocornut/imgui
+[submodule "third_party/BHS_game"]
+	path = third_party/BHS_game
+	url = https://github.com/Zartris/BHS_game
