imgui, vulkan and cmake is now working

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,4 @@
 file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
+add_library(bhs_vis_lib STATIC ${SOURCES})
 
-add_executable(bhs_vis ${SOURCES})
-
-target_include_directories(bhs_vis PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(bhs_vis_lib PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
